--- a/IndexWeatherUp.html
+++ b/IndexWeatherUp.html
@@ -117,7 +117,7 @@
       </div>
     </div>
     </div>
-    <p>Coded by Claudia Carli</p>
+    <p>Coded by <em> Claudia Carli </em></p>
     <script src = js-HW3-Plus..js></script>
   </body>
 </html>
