deleted old index.html file and renamed actual one

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
         <h1>WeatherUP</h1>
          <div class="row">
           <div class="col-8" id="cityName"><em>Firenze</em></div>
-          <div class="col-4" id="currentDate"><em>Today's date</em></div>
+          <div class="col-4" id="currentDate"><em>Tue 7 Sept 1982</em></div>
          </div>
         <div class="row">
           <div class="col-8" id="temps">25°C and sunny </div>
