Updated signature and link

--- a/Index.html
+++ b/Index.html
@@ -117,7 +117,8 @@
       </div>
     </div>
     </div>
-    <p>Coded by <em> Claudia Carli </em></p>
+    <br>
+    <h6> <a href="https://github.com/Clacarli/My-weatherUp" class="signature">Open Source code </a> by Claudia Carli</h6>
     <script src = js-HW3-Plus..js></script>
   </body>
 </html>
